--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "axios": "^0.15.3",
+    "axios": "^0.19.2",
     "babel-runtime": "^5.8.0",
     "chart.js": "2.3.0",
     "datatables.net": "^1.10.19",
     "datatables.net-bs": "^1.10.19",
     "faker": "^3.1.0",
+    "fs": "0.0.1-security",
     "hideseek": "^0.7.0",
-    "http-server": "^0.9.0",
+    "http-server": "^0.12.1",
     "jexcel": "^3.9.1",
     "jquery": "^2.2.2",
+    "json-server": "^0.16.0",
     "moment": "^2.12.0",
+    "net": "^1.0.2",
     "vue": "^2.2.2",
     "vue-date-picker": "^1.0.2",
     "vue-resource": "^1.0.3",
@@ -60,12 +63,12 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
+    "express": "^4.17.1",
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.0",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "function-bind": "^1.1.0",
-    "geckodriver": "^1.8.0",
+    "geckodriver": "^1.19.1",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^2.0.1",
