--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "net": "^1.0.2",
     "vue": "^2.2.2",
     "vue-date-picker": "^1.0.2",
+    "vue-dropdown": "^0.1.0",
+    "vue-dynamic-dropdown": "^1.0.12",
     "vue-resource": "^1.0.3",
     "vue-router": "^2.2.0",
     "vuex": "^2.0.0",
